@@ -1,35 +1,7 @@
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-group = 'com.genius.primavera'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '12'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-test {
-    jvmArgs(['--enable-preview'])
-}
-
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-aop')
     implementation('org.springframework.boot:spring-boot-starter-jdbc')
     implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.springframework.boot:spring-boot-starter-security')
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1")
     compile("org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.1.1")
     compile ('org.mariadb.jdbc:mariadb-java-client:2.4.1')
